--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -19,4 +19,14 @@ jobs:
         env:
           MONGO_INITDB_ROOT_USERNAME: root
           MONGO_INITDB_ROOT_PASSWORD: password
+    
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+    
+      - name: Install dependencies
+        run: npm install
+    
+      - name: Run tests
+        run: npm test
 
